--- a/03-css/01-selectors.css
+++ b/03-css/01-selectors.css
@@ -9,13 +9,37 @@
 }
 
 /* Use attribute selectors for the first part of the exercise */
-
+/*
 li[class] {
   color: var(--red);
 }
+*/
+li[id="cat"] {
+  color: var(--teal);
+}
 
+li[class^="p"] {
+  color: var(--green);
+}
+
+li[class*="do"] {
+  color: var(--royalblue);
+}
+
+/* Order matters, if you do this above class"do", the dog will be blue */
+li[class$="g"] {
+  color: var(--violet);
+}
 /* Use descendant, child, and sibling selectors for the second part */
 
 section li {
   color: var(--green);
+}
+
+.first ~ li {
+  color: var(--violet);
+}
+
+.second + li {
+  color: var(--royalblue);
 }
